objects/LLC_BI__Projection_Bundle_Junction__c.object
<CustomObject>
    <description>The Projection Bundle Junction object is a junction between the Underwriting Bundle and Spread Projection Template objects.</description>
    <fields>
        <fullName>LLC_BI__Bundle__c</fullName>
        <description>The system automatically populates this required lookup field with the Underwriting Bundle associated with the Projections Template.</description>
        <label>Bundle</label>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Projection Bundle Junctions</relationshipLabel>
        <relationshipName>Projection_Bundle_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Projection_Template__c</fullName>
        <description>The system automatically populates this required lookup field with the associated Projections Template.</description>
        <label>Projection Template</label>
        <referenceTo>LLC_BI__Spread_Projections_Template__c</referenceTo>
        <relationshipLabel>Projection Bundle Junctions</relationshipLabel>
        <relationshipName>Projection_Bundle_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Projection Bundle Junction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Projection Bundle Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projection Bundle Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>